--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     Bei Fragen steht Ihnen das HR Team zur verfügung.
   </div>
   <div class="footer-links">
-    <a href="index.html">Startseite</a>
-    <a href="angebot.html">Angebot</a>
-    <a href="ueber_uns.html">Über uns</a>
+    <a href="https://lavellaa.github.io/PicturePerfect/">Startseite</a>
+    <a href="https://lavellaa.github.io/Angebot/">Angebot</a>
+    <a href="https://lavellaa.github.io/-ber-Uns/">Über uns</a>
   </div>
 </div>
 </body>
